# ObToVmf

./: .gitignore  README.md  open_gui.bat  pyproject.toml
lua/autorun/client/: oblivion_skybox.lua
scripts/: compile_map.ps1
src/oblivion2vmf/: __init__.py  acd.py  acd_worker.py  bsa.py  cli.py  dds.py  esm.py  gui.py  hullview.py  land.py  model.py  nif.py  obj.py  props.py  qtgui.py  regions.py  skybox.py  textures.py  trees.py  vmf.py  vtf.py
tests/: conftest.py  test_bsa.py  test_dds.py  test_esm.py  test_interior.py  test_land.py  test_model.py  test_nif.py  test_props.py  test_skybox.py  test_textures.py  test_trees.py  test_vmf.py  test_vtf.py
